# CLIPbase

./: .flake8  .gitignore  prog.py  pylintrc  pyproject.toml
docker/: Dockerfile
modelbase/core/: __init__.py  dataset.py  datastruct.py  network.py  process.py  utils.py
modelbase/dataset_store/: flickr8kcaption_dataset.py
modelbase/network_store/: clip_net.py
modelbase/process_store/: clip_proc.py
resources/: clip_process.yaml
